[package]
name = "grus-lib"
version = "0.1.0"
edition = "2021"
description = "Library for accessing grus database"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
interim = { version = "0.1.0", features = ["chrono"], optional = true }
sanakirja = "1.3.3"
